--- a/docker-compose-deploy.yml
+++ b/docker-compose-deploy.yml
@@ -34,10 +34,11 @@ services:
     depends_on:
       - app
     ports:
-      - 8000:8000
+      - 80:8000
     volumes:
-      - static-data:/vol/static
+      - proxy-static-data:/vol/static
 
 volumes:
   postgres-data:
   static-data:
+  proxy-static-data:
